scripts/nullaway/annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8.txt
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/fifo/MulticastSender.java:29: error: [NullAway] dereferenced expression this.multicastSocket is @Nullable
		this.multicastSocket.send(pack);
		                    ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/commons/Address.java:37: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return id;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/MulticastServer.java:77: error: [NullAway] dereferenced expression socket is @Nullable
				socket.receive(reply);
				      ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/ProxyNode.java:67: error: [NullAway] passing @Nullable parameter 'msg.getActualMessage()' where @NonNull is required
		return MessageType.valueOf(msg.getActualMessage());
		                                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/commons/MessageTransformer.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/MulticastListener.java:28: error: [NullAway] initializer method does not guarantee @NonNull field multicastSocket (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public MulticastListener(int port, String group) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/MulticastListener.java:61: error: [NullAway] dereferenced expression replyMsg is @Nullable
								if (replyMsg.isReply()
								            ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/Replica.java:131: error: [NullAway] dereferenced expression getLeaderName() is @Nullable
				System.out.println("isLeader:" + getLeaderName().equals(id));
				                                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/Replica.java:173: error: [NullAway] dereferenced expression requestHandler.doOperation(request) is @Nullable
		return requestHandler.doOperation(request).toString();
		                                          ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/Replica.java:173: error: [NullAway] dereferenced expression requestHandler is @Nullable
		return requestHandler.doOperation(request).toString();
		                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/messenger/UDPServer.java:50: error: [NullAway] dereferenced expression aSocket is @Nullable
											aSocket.send(reply);
											       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/DefaultRequestHandler.java:91: error: [NullAway] dereferenced expression replies.get(rMsg.getSequenceNumber()) is @Nullable
				replies.get(rMsg.getSequenceNumber()).add(rMsg);
				                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/DefaultRequestHandler.java:96: error: [NullAway] dereferenced expression command is @Nullable
			return command.execute(msg.getArguments());
			              ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/StationServerImpl.java:407: error: [NullAway] dereferenced expression this.records.get(Character.toUpperCase(lastName.charAt(0))) is @Nullable
			this.records.get(Character.toUpperCase(lastName.charAt(0))).add(
			                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/StationServerImpl.java:456: error: [NullAway] dereferenced expression recList is @Nullable
				Iterator<Record> recListItr = recList.iterator();
				                                     ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/StationServerImpl.java:691: error: [NullAway] initializer method does not guarantee @NonNull fields in (line 687), out (line 688) are initialized along all control-flow paths (remember to check for exceptions or early returns).
			public Connection(Socket clientSocket) {
			       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/domain/Record.java:12: error: [NullAway] initializer method does not guarantee @NonNull field recordType (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Record(final String id, final String firstName, final String lastName) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/FaultyStationServerImpl.java:271: error: [NullAway] dereferenced expression this.records.get(Character.toUpperCase(lastName.charAt(0))) is @Nullable
			this.records.get(Character.toUpperCase(lastName.charAt(0))).add(
			                                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlfcc351a1ba_kuntapavankumar_Z_tgz-pJ8-edu_concordia_dpis_ReplicaTestJ8/src/edu/concordia/dpis/stationserver/FaultyStationServerImpl.java:447: error: [NullAway] initializer method does not guarantee @NonNull fields in (line 443), out (line 444) are initialized along all control-flow paths (remember to check for exceptions or early returns).
			public Connection(Socket clientSocket) {
			       ^
    (see http://t.uber.com/nullaway )
19 errors
